# motd-gen

./: Cargo.toml
lib/asciify-rs/: Cargo.toml
lib/asciify-rs/src/: lib.rs
