[package]
name = "motd-gen-bin"
version = "0.1.0"
authors = ["Nicholas Burrell <zero_frost@protonmail.com>"]
edition = "2018"

[dependencies]
asciify-rs = { path = "./lib/asciify-rs" , version = "0.1.0" }
clap = "2.33.0"
chrono = { version = "0.4", features = ["serde"] }
psutil = "1.7.0"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"