[package]
name = "asciify-rs"
version = "0.1.0"
authors = ["Nicholas Burrell <zero_frost@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
image = "0.22.2"
num = "0.2.0"
num-traits = "0.2.0"
colored = "1.8.0"